# assignment-2-CI

./: .gitignore  CONTRIBUTING.md  README.md  STATEMENT_OF_CONTRIBUTION.md  pyproject.toml  requirements.txt
.github/issue-prs/: issue-14.md  issue-17.md  issue-19.md  issue-21.md  issue-23.md  issue-25.md  issue-27.md  issue-29.md  issue-3.md  issue-32.md  issue-35.md  issue-37.md  issue-39.md  issue-41.md  issue-43.md  issue-45.md  issue-48.md  issue-5.md  issue-50.md  issue-54.md  issue-7.md
.github/workflows/: ci-run-tests.yml  docs-build-deploy.yml  open-pr-for-issue.yml
docs/: search.js  src.html
docs/src/: adapters.html  auth.html  builder.html  input_validation.html  main.html  models.html  ports.html
docs/src/adapters/: notifier.html
docs/src/ports/: notifier.html
src/: __init__.py  auth.py  builder.py  input_validation.py  main.py  models.py  view_history.py
src/adapters/: __init__.py
src/adapters/notifier/: __init__.py  github.py
src/infra/: __init__.py
src/infra/githubAuth/: __init__.py  appAuth.py  githubAuth.py  patAuth.py
src/infra/http/: __init__.py  httpClient.py  requestsHttpClient.py  requests_http_client.py
src/infra/notifier/: __init__.py  exceptions.py  github.py  requestsTransport.py
src/infra/time/: __init__.py  clock.py
src/ports/: __init__.py  notifier.py
tests/: always_true_test.py  builder_test.py
tests/adapters/: githubNotifier_test.py
tests/infra/: appAuth_test.py  patAuth_test.py  requestsTransport_test.py
tests/mocks/: clockMock.py  githubAuthMock.py  httpClientMock.py
(+1 files in other folders)
